--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
+    - name: List repo files
+      run: ls -la
+
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
