--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,16 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-     - name: Build Docker image
-          run: docker build -t myapp . 
+      - name: Build Docker image
+        run: docker build -t myapp .
 
- - name: Log in to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Build Docker image with tag
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo-app:${{ github.sha }} .
 
       - name: Push to DockerHub
