--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
-"scripts": {
-  "start": "node app.js",
-  "test": "echo \"Dummy test passed\" && exit 0"
+{
+  "name": "nodejs-demo-app",
+  "version": "1.0.0",
+  "description": "A demo Node.js application",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
 
