--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.21.2"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
-
